--- a/app/translations/terms-of-use_en.yml
+++ b/app/translations/terms-of-use_en.yml
@@ -1,5 +1,7 @@
 en:
   terms_of_use_md: |
+    **Terms of Service**
+
     These terms govern your use of our platform-as-a-service or other services (collectively, “Services”) and software that we include as part of the Services, including any applications, Content Files (defined below), scripts, instruction sets, and any related documentation (collectively “Software”). By using the Services or Software, you agree to these terms. If you have entered into another agreement with us concerning specific Services or Software, then the terms of that agreement controls where it conflicts with these terms.
 
     **You retain all rights and ownership in any code you have developed on top of the Services as well as content and business data such as contacts, transaction records, etc that you make available through the Services.**
