Questions: improve ux for votes

--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -1008,6 +1008,9 @@ en:
         answers: answers
         score: score
         questions-tagged-by: 'Questions tagged: <span class="font-bold">%{tag}</span>'
+        upvote: "+1"
+        downvote: "-1"
+        clear: clear
         errors:
           only_owner_can_accept_answer: Only owner can accept answer
           owner_cant_vote_his_answer: "You can't vote on answer you wrote"
