add requested changes

--- a/app/translations/privacy-policy_en.yml
+++ b/app/translations/privacy-policy_en.yml
@@ -69,7 +69,7 @@ en:
 
     ## Other Terms and Conditions
 
-    Your access to and use of the Services is subject to the pOS Terms of Service located at https://www.platformos.com/terms.
+    Your access to and use of the Services is subject to the pOS Terms of Service located at https://www.platformos.com/terms-of-use.
 
     ## Changes to pOS's Privacy Policy
 
