--- a/app/translations/terms-of-use_en.yml
+++ b/app/translations/terms-of-use_en.yml
@@ -24,7 +24,7 @@ en:
 
     2.2 **Eligibility**. You may only use the Services if you are over 13 years old.
 
-    2.3 **Privacy**. The Privacy Policy at [platformos.com/privacy](/privacy) governs any personal information you provide to us. **By using the Services or Software you agree to the terms of the Privacy Policy**.
+    2.3 **Privacy**. The Privacy Policy at [getmarketplace.co/privacy-policy](getmarketplace.co/privacy-policy) governs any personal information you provide to us. **By using the Services or Software you agree to the terms of the Privacy Policy**.
 
     2.4 **Application Usage Data**. Information about how you use the Services is shared with pOS. This information associated with your pOS account allows us to provide you with a more personalized experience, and helps us improve product quality and features.
 
