--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -1016,6 +1016,7 @@ en:
         form:
           creator_id: creator_id
           body: Body
+          body_help: "You can use formatting: [link](https://example.com) _italic_ **bold** `code`"
           title: Title
           uuid: uuid
           commentable_id: commentable_id
