Questions: restrict comment changes only to the creator

--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -948,6 +948,7 @@ en:
         delete_failed: Delete failed
         deleted: Deleted
         updated: Updated
+        edit: Edit
       contacts:
         reasons:
           purchase: Purchase
