--- a/app/translations/en.yml
+++ b/app/translations/en.yml
@@ -1014,6 +1014,7 @@ en:
         read_more: Read more
         send: Send
         comment: Comment
+        create_failed: Create failed
         form:
           creator_id: creator_id
           body: Body
